--- a/package.json
+++ b/package.json
@@ -1,11 +1,58 @@
 {
   "name": "npm-extract",
   "description": "Simple module to extract a node module from the current path, git cloning it and then npm linking.",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "dependencies": {
     "isomorphic-git": "^0.19.11",
     "lodash.get": "^4.4.2",
+    "lodash.isnull": "^3.0.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isstring": "^4.0.1",
     "require-like": "^0.1.2",
     "yargs": "^12.0.1"
+  },
+  "config": {
+    "yargs": {
+      "options": {
+        "cwd": {
+          "alias": "c",
+          "default": "${process.cwd()}",
+          "describe": "The working directory to extract and link from.",
+          "defaultDescription": "Current working directory.",
+          "type": "string"
+        },
+        "dest": {
+          "alias": "d",
+          "describe": "The directory to clone module to.",
+          "demandOption": "No --dest switch given. Please supply a destination for module extraction.",
+          "type": "string"
+        },
+        "id": {
+          "alias": "i",
+          "describe": "The module to clone and link.",
+          "demandOption": "No --id switch given. Please supply a module to clone and link to.",
+          "type": "string"
+        },
+        "pkfile": {
+          "alias": "g",
+          "describe": "The directory to clone to within destination directory.",
+          "defaultDescription": "The repository name.",
+          "default": "package.json",
+          "type": "string"
+        },
+        "repo": {
+          "alias": "r",
+          "describe": "The url of the repository.",
+          "defaultDescription": "Taken from the package file repository.url / repository.",
+          "type": "string"
+        },
+        "npm": {
+          "alias": "n",
+          "describe": "The 'npm' command to use, eg: npm, yarn or pnpm .",
+          "default": "npm",
+          "type": "string"
+        }
+      }
+    }
   }
 }
