--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm-extract",
   "description": "Simple module to extract a node module from the current path, git cloning it and then npm linking.",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "dependencies": {
     "isomorphic-git": "^0.19.11",
     "lodash.get": "^4.4.2",
@@ -25,12 +25,14 @@
           "alias": "d",
           "describe": "The directory to clone module to.",
           "demandOption": "No --dest switch given. Please supply a destination for module extraction.",
+          "demandOptionApi": "No destination for module extraction.",
           "type": "string"
         },
         "id": {
           "alias": "i",
           "describe": "The module to clone and link.",
           "demandOption": "No --id switch given. Please supply a module to clone and link to.",
+          "demandOptionApi": "No module id given.",
           "type": "string"
         },
         "pkfile": {
